# weixin-articles-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
src/weixin_articles_mcp/: __init__.py  fetcher.py  markdown.py  media.py  parser.py  server.py
tests/: test_parser.py
